hphp/hack/test/typecheck/case_type/recursive/subtyping_simple1.php.exp
ERROR: File "subtyping_simple1.php", line 4, characters 11-11:
This recursive case type is not supported. `A` should not be at the top-level. (Typing[4485])
ERROR: File "subtyping_simple1.php", line 11, characters 17-18:
Invalid argument (Typing[4110])
  File "subtyping_simple1.php", line 7, characters 24-29:
  Expected `string`
  File "subtyping_simple1.php", line 9, characters 14-14:
  But got `mixed`
  File "subtyping_simple1.php", line 4, characters 11-11:
    by the definition of `A` arising from an implicit `as ?nonnull` constraint on this type
